# intellino

./: .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  main.py  main_py(tutorial).txt  mnist_dataset.py  mnist_visualization.py  neuron_cell.py  requirements.txt  setup.cfg  setup.py  utils.py
00_github_code/200819_intellino/intellino-master/intellino-master/: .gitignore  Makefile
00_github_code/200819_intellino/intellino-master/intellino-master/docs/: requirements.txt
00_github_code/200819_intellino/intellino-master/intellino-master/docs/source/: conf.py  index.rst
00_github_code/200819_intellino/intellino-master/intellino-master/example/mnist/: mnist_dataset.py
00_github_code/200819_intellino/intellino-master/intellino-master/intellino/core/: __init__.py  neuron_cell.cp36-win_amd64.pyd
00_github_code/200819_intellino/intellino-master/intellino-master/intellino/utils/data/: __init__.py  dataset.py
01_temp/: readme.txt
01_temp/200820_v01/: main.py  neuron_cell.py
01_temp/200821_v01/: main.py  neuron_cell.py
docs/: requirements.txt
docs/source/: conf.py
example/mnist/: main.py  utils.py
intellino/: __init__.py
intellino/core/: __init__.py  neuron_cell.pyx
intellino/utils/: performance.py
intellino/utils/data/: __init__.py  dataloader.py
manual/: MANUAL.md
