
[tool:pytest]
norecursedirs = 
	.git
	dist
	build
python_files = 
	test_*.py
doctest_plus = disabled
addopts = --strict
markers = 
	slow
	remote_data
	filterwarnings
	gpus_param_tests

[pycodestyle]
ignore = E731,W504
max-line-length = 120

[coverage:report]
exclude_lines = 
	pragma: no cover
	def __repr__
	if self.debug:
	if settings.DEBUG
	raise AssertionError
	raise NotImplementedError
	if 0:
	if __name__ == .__main__.:
	except Exception as e
	print(e)
	print(traceback.print_exc())
	return *
	raise Exception
	raise *
	except *
	warnings
	print
	raise RuntimeError
	break
	pass
	os.makedirs

[check-manifest]
ignore =
    .travis.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md